Fix alignment of items and make it more responsive

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,9 +38,11 @@ body
 
   main {
     height: 100%;
-    width: 750px !important;
-    min-width: 750px !important;
-    padding: 60px 30px 0px 0px;
+    padding: 4.35% 2.5% 0 0;
+  }
+
+  #works-grid {
+    padding-top: 2.25%;
   }
 
   .sign_in {
