--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -4,9 +4,9 @@
 nav {
   position: absolute;
   left: 0;
-  top: 20%;
-  height: 60%;
-  width: 17%;
+  top: 17%;
+  height: 65%;
+  width: 22%;
   background-color: #282828;
   @include opacity(0.87);
   border-top-right-radius: 5%;
